--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -3,9 +3,9 @@
   justify-content: space-evenly;
   font-size: 2.6rem;
   color: #eee;
-  margin-top: 8%;
-  margin-left: 12%;
-
+  margin-top: 15rem;
+  padding-top: 5rem;
+  
   &-nav {
     position: fixed;
     left: 10px;
