--- a/src/sass/components/_messages.scss
+++ b/src/sass/components/_messages.scss
@@ -1,27 +1,87 @@
 .messages {
   display: flex;
   justify-content: center;
-  width: 100%;
-  
+  width: 80%;
+
   &-people {
     width: 30%;
-    border-right: 3px solid #000;
-    max-height: 80vh;
-    min-height: 80vh;
+    min-height: 60rem;
+    margin-top: 4rem;
     overflow-y: scroll;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 
+    position: relative;
+
+    &_search {
+      @extend .home-feed-posts-card-content-bottom_comment-input;
+      margin: 1rem 0rem 4rem 0 !important;
+      width: 90%;
+      height: 6rem;
+
+      &-results {
+        position: absolute;
+        top: 7rem;
+        left: 0;
+        width: 100%;
+        background-color: #000;
+        height: 500px;
+        overflow-y: scroll;
+
+        &-each {
+            background-color: #454545;
+            border-top: 2px solid #000;
+            display: flex;
+            align-items: center;
+            margin-top: .5rem;
+            padding: .5rem 1rem;
+            transition: all .2s ease-out;
+            position: relative;
+
+            &:hover {
+                background-color: #565656;
+                cursor: pointer;
+
+                &::after {
+                    content: "Create Chat";
+                    position: absolute;
+                    right: 0;
+                    margin-right: 2rem;
+                    font-size: 1.8rem;
+                    color: #cdcdcd
+                }
+            }
+
+            &_avatar {
+                @extend .home-feed-posts-card-avatar;
+
+                height: 60px;
+                min-width: 60px;
+                max-width: 60px;
+
+                &-img {
+                    @extend .home-feed-posts-card-avatar-img;
+                }
+            }
+            &_username {
+
+            }
+        }
+      }
+    }
+
+
     &-card {
       display: flex;
       align-items: flex-start;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
       background-color: #343434;
       padding: 0.5rem 1rem;
+      width: 90%;
       transition: all 0.2s ease-out;
-      margin-right: 8rem;
+      //   margin-right: 8rem;
 
       &,
       &:link,
@@ -36,7 +96,7 @@
 
       &_selected {
         @extend .messages-people-card;
-        background-color: #565656;
+        box-shadow: 0 0.5rem 0 $green;
       }
 
       &_avatar {
@@ -65,6 +125,276 @@
   &-list {
     width: 35%;
     margin-right: 5rem;
-    
+    display: flex;
+    justify-content: center;
+
+    &_empty {
+      margin-top: 5rem;
+    }
+  }
+}
+
+.chatbox {
+  position: fixed;
+  display: block;
+  width: 500px;
+  height: 800px;
+  top: 140px;
+  right: 280px;
+  z-index: 2002;
+
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  transition: all 0.2s ease-out;
+
+  &__content {
+    height: 80rem;
+    width: 100%;
+    box-shadow: 0 0 5rem #000;
+    color: #000;
+    background-color: #eee;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    opacity: 1;
+    // transform: translate(20%, -100%) scale(1);
+    transition: all 0.3s ease-in-out;
+  }
+
+  &__top {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #222;
+    color: #ddd;
+    font-size: 1.6rem;
+
+    &-username {
+      margin-left: 3rem;
+    }
+  }
+
+  &__middle {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-anchor: none;
+    background-color: #bbb;
+    padding: 2rem 1rem;
+    overflow-y: scroll;
+
+    &-content {
+      overflow-anchor: auto;
+      padding-bottom: 2rem;
+    }
+
+    &-bubble {
+      position: relative;
+      clear: both;
+      display: block;
+      height: auto;
+      width: auto;
+      max-width: 50%;
+      word-wrap: break-word;
+      word-break: keep-all;
+      font-family: sans-serif;
+      text-align: left;
+      line-height: 1.5em;
+      margin: 2px 10px;
+      padding: 10px;
+      cursor: default;
+      border-radius: 15px;
+      font-size: 1.6rem;
+
+      &-receiver {
+        float: left;
+        background-color: #999;
+
+        &::before {
+          /* Left Message Bubble Tail */
+          content: "";
+          position: absolute;
+          top: 5px;
+          left: -10px;
+          border-top: 15px solid #999;
+          border-left: 15px solid transparent;
+        }
+      }
+
+      &-sender {
+        float: right;
+        background-color: $lightblue;
+
+        &::before {
+          /* Right Message Bubble Tail */
+          content: "";
+          position: absolute;
+          bottom: 5px;
+          right: -10px;
+          border-bottom: 15px solid $lightblue;
+          border-right: 15px solid transparent;
+        }
+      }
+    }
+  }
+
+  &__bottom {
+    width: 100%;
+    height: 10%;
+    font-size: 1.6rem;
+    // width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    // padding: 3rem 5rem;
+    // vertical-align: middle;
+
+    &-form {
+      height: 100%;
+      width: auto;
+      display: flex;
+      align-items: center;
+
+      &-message {
+        height: 100%;
+        width: 80%;
+        padding: 1rem 3rem;
+        vertical-align: middle;
+        resize: none;
+        font-size: 2rem;
+        border: none;
+        border-radius: 0;
+        background-color: #232323;
+        color: #ddd;
+        outline: none;
+
+        &:required {
+          box-shadow: none;
+        }
+      }
+
+      &-submit {
+        height: 100%;
+        width: 20%;
+        border: 2px #000;
+        border-left-style: solid;
+        color: #dedede;
+        font-size: 2rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        background-color: #232323;
+        transition: all .1s ease-out;
+
+        &:hover {
+            color: $green;
+            background-color: #000;
+            cursor: pointer;
+        }
+      }
+    }
+  }
+
+  &__img {
+    display: block;
+    width: 100%;
+  }
+
+  &__text {
+    font-size: 1.6rem;
+    margin-bottom: 4rem;
+
+    // column-count: 2;
+    // column-gap: 4rem;
+    // column-rule: 1px solid #444;
+
+    // -webkit-hyphens: auto;
+    // -ms-hyphens: auto;
+    // hyphens: auto;
+
+    &--dots {
+      display: none;
+    }
+
+    &--more {
+      display: inline;
+    }
+  }
+
+  &__close {
+    &,
+    &:link,
+    &:visited {
+      color: #777;
+      position: relative;
+      bottom: .2rem;
+      right: 3rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      line-height: 1;
+    }
+
+    &:hover {
+      color: red;
+    }
+  }
+
+  &-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #222;
+    font-size: 2rem;
+
+    &-group {
+      & label {
+        text-align: center;
+
+        // width: 400px;
+      }
+
+      // width: 700px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+
+    &-input {
+      font-size: 1.6rem;
+      background-color: #111;
+      color: #eee;
+      padding: 1rem 1.5rem;
+      border: none;
+      border-radius: 2px;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+        background-color: #13f;
+      }
+
+      &:active,
+      &:focus {
+        outline: none;
+        background-color: #13f;
+      }
+    }
+
+    &-btn {
+      background-color: #13f;
+      border: none;
+      border-radius: 3px;
+      font-size: 3rem;
+      float: left;
+      color: #fff;
+      padding: 1rem 1.5rem;
+      margin: 5rem -1rem 0 7.5rem;
+    }
   }
 }
