--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -5,7 +5,7 @@
   color: #eee;
   margin-top: 15rem;
   padding-top: 5rem;
-  
+
   &-nav {
     position: fixed;
     left: 10px;
@@ -70,6 +70,25 @@
         }
       }
 
+      &-messages {
+        display: flex;
+        position: relative;
+        &_number {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          margin-left: 2.7rem;
+          font-size: 1.6rem;
+          font-weight: 700;
+          border-radius: 50%;
+          height: 20px;
+          width: 20px;
+          color: $black;
+          background-color: $green;
+        }
+      }
+
       & > * {
         transition: all 0.2s ease-out;
       }
@@ -109,7 +128,7 @@
         padding: 1rem 2rem;
         min-width: 900px;
         max-width: 900px;
-        margin: 0rem .5rem 3rem;
+        margin: 0rem 0.5rem 3rem;
         transition: all 0.2s ease-out;
         position: relative;
 
@@ -120,7 +139,7 @@
           line-height: 0.5;
           width: 30px;
           height: 40px;
-          transition: all .2s ease-out;
+          transition: all 0.2s ease-out;
 
           &-input {
             position: absolute;
@@ -131,7 +150,6 @@
             &:hover {
               cursor: pointer;
             }
-
           }
 
           &-input:checked ~ &-dropdown {
@@ -141,17 +159,16 @@
           &-input:checked ~ &-dots {
             transform: scale(0);
           }
-          
+
           &-input:checked ~ &-close {
             transform: scale(2);
           }
 
           &-dots {
-            
             display: flex;
             flex-direction: column;
             align-items: center;
-            transition: all .2s ease-out;
+            transition: all 0.2s ease-out;
           }
 
           &-close {
@@ -163,7 +180,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            transition: all .2s ease-out;
+            transition: all 0.2s ease-out;
           }
 
           &-dropdown {
@@ -171,7 +188,7 @@
             background-color: #fff;
             width: 150px;
             height: auto;
-            transition: all .2s ease-out;
+            transition: all 0.2s ease-out;
             color: #222;
             padding: 1rem 2rem;
             display: block;
@@ -184,7 +201,6 @@
             &_delete {
               font-size: 2rem;
               display: block;
-
             }
           }
         }
@@ -397,6 +413,21 @@
                 margin: 0 1rem;
                 font-size: 2rem;
                 transition: all 0.2s ease-out;
+
+                &_success {
+                  border: none;
+                  padding: 1rem 1.5rem;
+                  border-radius: 3px;
+                  text-transform: uppercase;
+                  margin: 0 1rem;
+                  font-size: 2rem;
+                  background-color: $green;
+                  color: $black;
+
+                  &:hover {
+                    cursor: wait;
+                  }
+                }
 
                 &:hover {
                   background-color: $green;
