--- a/src/sass/components/_notifications.scss
+++ b/src/sass/components/_notifications.scss
@@ -20,5 +20,11 @@
 .notifications {
     display: flex;
     flex-direction: column;
-    width: 78%;
+    width: 50%;
+    min-height: 50vh;
+    justify-content: center;
+
+    &_none {
+        align-self: center;
+    }
 }
