went back to using images for createChat

--- a/src/index.css
+++ b/src/index.css
@@ -354,7 +354,8 @@ nav ul {
           justify-content: center;
           align-items: center;
           position: absolute;
-          margin-left: 2.7rem;
+          margin-left: 4.7rem;
+          left: 72%;
           font-size: 1.6rem;
           font-weight: 700;
           border-radius: 50%;
