--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -78,7 +78,8 @@
           justify-content: center;
           align-items: center;
           position: absolute;
-          margin-left: 2.7rem;
+          margin-left: 4.7rem;
+          left: 72%;
           font-size: 1.6rem;
           font-weight: 700;
           border-radius: 50%;
