--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,18 @@ html {
   font-size: 62.5%;
   background-color: #14110F;
   scroll-behavior: smooth; }
+  @media only screen and (max-width: 100em) {
+    html {
+      font-size: 60%; } }
+  @media only screen and (max-width: 90em) {
+    html {
+      font-size: 56.25%; } }
+  @media only screen and (max-width: 65em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (max-width: 44em) {
+    html {
+      font-size: 40%; } }
 
 body {
   font-family: "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -69,8 +81,14 @@ nav ul {
   display: flex;
   align-items: center;
   width: 15%; }
+  @media only screen and (max-width: 44em) {
+    .logo {
+      width: 100%;
+      justify-content: center; } }
+  .logo, .logo:link, .logo:visited {
+    text-decoration: none; }
   .logo:hover {
-    cursor: default; }
+    cursor: pointer; }
   .logo-img {
     font-size: 8rem;
     color: #14110F;
@@ -88,6 +106,9 @@ nav ul {
   font-weight: 700;
   line-height: 1;
   display: flex; }
+  @media only screen and (max-width: 44em) {
+    .title {
+      font-size: 5rem; } }
 
 .title-green {
   color: #04ED04 !important; }
@@ -129,6 +150,12 @@ nav ul {
   .nav-link:visited:hover {
     color: #04ED04;
     cursor: pointer; }
+  @media only screen and (max-width: 44em) {
+    .nav-link,
+    .nav-link:link,
+    .nav-link:active,
+    .nav-link:visited {
+      display: none; } }
 
 .progress {
   display: flex;
@@ -251,6 +278,9 @@ nav ul {
   height: 99.5vh;
   color: #ddd;
   overflow: hidden; }
+  @media only screen and (max-width: 44em) {
+    .landing {
+      display: block; } }
   .landing-heading {
     display: flex;
     justify-content: center;
@@ -258,12 +288,18 @@ nav ul {
     flex-direction: column;
     align-items: flex-start;
     text-transform: uppercase;
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 700;
     letter-spacing: 1rem;
     position: absolute;
     right: 10rem;
     margin-top: 5rem; }
+    @media only screen and (max-width: 44em) {
+      .landing-heading {
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        right: 0; } }
     .landing-heading span {
       display: block;
       margin: 2rem 0rem 0rem 0rem; }
@@ -275,24 +311,41 @@ nav ul {
       background-color: #04ED04;
       color: black;
       margin-top: 5rem;
-      transition: all .3s ease-out;
+      transition: all 0.3s ease-out;
       text-decoration: none;
       text-transform: none;
       letter-spacing: normal;
       min-width: 150px; }
+      @media only screen and (max-width: 100em) {
+        .landing-heading-btn, .form-button, .landing-heading-btn:link, .form-button:link, .landing-heading-btn:visited, .form-button:visited {
+          font-size: 2.4rem; } }
+      @media only screen and (max-width: 90em) {
+        .landing-heading-btn, .form-button, .landing-heading-btn:link, .form-button:link, .landing-heading-btn:visited, .form-button:visited {
+          font-size: 2rem; } }
+      @media only screen and (max-width: 44em) {
+        .landing-heading-btn, .form-button, .landing-heading-btn:link, .form-button:link, .landing-heading-btn:visited, .form-button:visited {
+          font-size: 3rem;
+          min-width: 100px; } }
       .landing-heading-btn:hover, .form-button:hover, .landing-heading-btn:link:hover, .form-button:link:hover, .landing-heading-btn:visited:hover, .form-button:visited:hover {
         cursor: pointer;
         box-shadow: 0rem 0rem 1rem #04ED04; }
   .landing-image {
     height: 100%;
-    width: 75%;
+    width: 100%;
     clip-path: polygon(0 0, 100% 0, 100% 0%, 50% 100%, 0 100%);
     position: absolute; }
+    @media only screen and (max-width: 44em) {
+      .landing-image {
+        clip-path: polygon(0 0, 100% 0, 100% 0%, 0% 100%, 0 100%); } }
     .landing-image img {
       height: 100%;
       width: 100%;
       object-fit: cover;
       object-position: center; }
+      @media only screen and (max-width: 44em) {
+        .landing-image img {
+          object-position: right;
+          opacity: 0.5; } }
 
 .home {
   display: flex;
@@ -712,17 +765,52 @@ nav ul {
   position: absolute;
   right: 17rem;
   margin-top: 3rem; }
+  @media only screen and (max-width: 100em) {
+    .form {
+      right: 7rem; } }
+  @media only screen and (max-width: 90em) {
+    .form {
+      right: 4rem; } }
+  @media only screen and (max-width: 65em) {
+    .form {
+      right: 2rem; } }
+  @media only screen and (max-width: 44em) {
+    .form {
+      height: 100%;
+      right: 0rem;
+      width: 80%; } }
   .form-input, .profile-info_edit {
     border: none;
     font-size: 3rem;
     padding: 1rem 1.5rem;
     margin: 1rem 0 3rem;
     width: 100%; }
+    @media only screen and (max-width: 100em) {
+      .form-input, .profile-info_edit {
+        font-size: 2.4rem;
+        width: 90%; } }
+    @media only screen and (max-width: 90em) {
+      .form-input, .profile-info_edit {
+        font-size: 2rem;
+        width: 80%; } }
+    @media only screen and (max-width: 44em) {
+      .form-input, .profile-info_edit {
+        font-size: 3.6rem; } }
   .form-label {
     font-size: 3rem; }
+    @media only screen and (max-width: 100em) {
+      .form-label {
+        font-size: 2.4rem; } }
+    @media only screen and (max-width: 90em) {
+      .form-label {
+        font-size: 2rem; } }
+    @media only screen and (max-width: 44em) {
+      .form-label {
+        font-size: 3rem; } }
   .form-button {
     margin-top: 3rem;
-    font-weight: 700; }
+    font-weight: 700;
+    height: 40px; }
   .form-error {
     font-size: 2rem;
     color: red; }
@@ -733,11 +821,22 @@ nav ul {
     font-size: 2rem;
     display: inline-block;
     width: 220px; }
+    @media only screen and (max-width: 100em) {
+      .form-member {
+        font-size: 1.6rem; } }
+    @media only screen and (max-width: 90em) {
+      .form-member {
+        font-size: 1.4rem;
+        width: 150px; } }
+    @media only screen and (max-width: 44em) {
+      .form-member {
+        font-size: 2.4rem;
+        width: 180px; } }
     .form-member span {
       display: inline-block; }
 
 .form-button_loading {
-  color: #ffffff;
+  color: #fff;
   font-size: 20px;
   text-indent: -9999em;
   overflow: hidden;
@@ -751,6 +850,9 @@ nav ul {
   transform: translateZ(0);
   -webkit-animation: load6 1.7s infinite ease, round 1.7s infinite ease;
   animation: load6 1.7s infinite ease, round 1.7s infinite ease; }
+  .form-button_loading_black {
+    color: #000;
+    margin: 0 auto; }
 
 @-webkit-keyframes load6 {
   0% {
@@ -1236,132 +1338,3 @@ footer {
     margin-right: 1rem; }
   footer a {
     color: lawngreen; }
-
-@media only screen and (max-width: 600px) {
-  nav {
-    padding: 0;
-    background-color: black;
-    color: aliceblue;
-    position: fixed;
-    top: 0;
-    width: 100%; }
-  nav ul {
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: black;
-    list-style: none;
-    justify-content: space-evenly;
-    align-items: center; }
-    nav ul a,
-    nav ul a:link,
-    nav ul a:visited {
-      color: #ddd;
-      text-decoration: none; }
-  .link,
-  .selected {
-    display: flex;
-    margin: 1.5rem 0.5rem;
-    font-size: 2rem;
-    padding-bottom: 0.7rem;
-    border-bottom: 1px solid lawngreen; }
-    .link, .link:link, .link:visited,
-    .selected,
-    .selected:link,
-    .selected:visited {
-      color: #ddd;
-      text-decoration: none; }
-  .nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; }
-  .title,
-  .title:link,
-  .title:visited {
-    font-size: 2rem;
-    padding: 2rem 15rem 2rem 12%;
-    text-transform: uppercase;
-    display: flex;
-    flex-direction: column; }
-  .progress {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    width: 90%;
-    flex-direction: column;
-    position: fixed;
-    margin: 9% 2rem 0 0;
-    top: 0;
-    right: 0; }
-    .progress-bar {
-      width: 50%;
-      margin: .7rem -1rem 1rem 0; }
-    .progress-text {
-      color: #ddd;
-      font-size: 2.4rem; }
-    .progress__hidden {
-      display: none;
-      visibility: hidden; }
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 300px));
-    justify-content: center;
-    align-items: center;
-    padding: 20rem 0 0rem; }
-  .day-btn {
-    background-color: lawngreen;
-    color: #000;
-    padding: 1rem 2.5rem;
-    border-radius: 2px;
-    margin-top: 1rem;
-    width: 100px; }
-  footer {
-    margin: 15rem 0; }
-  .main-top {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    margin-bottom: -15rem; }
-  .main-btns {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 15rem 0 3rem;
-    font-size: 1.6rem; }
-  .main-btn {
-    background-color: lawngreen;
-    color: #000;
-    padding: 1rem 2.5rem;
-    border-radius: 2px;
-    margin-top: 1rem;
-    width: 100px; }
-  .main-btn:hover {
-    cursor: pointer;
-    background-color: #5fbe00; }
-  .main-btn__hidden {
-    display: none;
-    visibility: hidden; }
-  .main-started {
-    align-self: center;
-    font-size: 1.6rem;
-    color: #ddd;
-    margin: 3rem 0 0rem; }
-  .main-current {
-    color: #ddd;
-    background: #000;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem;
-    margin: 5rem 0 0 0;
-    width: 300px;
-    text-align: center; }
-  .main-form--group input {
-    width: 70px;
-    margin-left: 1rem; }
-  .main-form--group__plus {
-    margin-left: 10px; } }
