--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -19,6 +19,11 @@
       @content;
     } //1200px?
   }
+  @if ($breakpoint == normal-desktop) {
+    @media only screen and (max-width: 100em) {
+      @content;
+    } //1200px?
+  }
   @if ($breakpoint == big-desktop) {
     @media only screen and (min-width: 112.5em) {
       @content;
