--- a/src/sass/components/_landing.scss
+++ b/src/sass/components/_landing.scss
@@ -1,60 +1,91 @@
 .landing {
-    @include centerFlex(row, space-between);
-    height: 99.5vh;
-    color: #ddd;
-    overflow: hidden;
-    
+  @include centerFlex(row, space-between);
+  height: 99.5vh;
+  color: #ddd;
+  overflow: hidden;
 
-    &-heading {
-        @include centerFlex(column);
-        align-items: flex-start;
-        text-transform: uppercase;
-        font-size: 4rem;
-        font-weight: 700;
-        letter-spacing: 1rem;
-        position: absolute;
-        right: 10rem;
-        margin-top: 5rem;
+  @include respond(phone) {
+    display: block;
+  }
 
-        & span {
-            display: block;
-            margin: 2rem 0rem 0rem 0rem;
-        }
+  &-heading {
+    @include centerFlex(column);
+    align-items: flex-start;
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-weight: 700;
+    letter-spacing: 1rem;
+    position: absolute;
+    right: 10rem;
+    margin-top: 5rem;
 
-        &-btn,
-        &-btn:link,
-        &-btn:visited {
-            border: none;
-            border-radius: 2px;
-            padding: 1rem 2rem;
-            font-size: 3rem;
-            background-color: $green;
-            color: black;
-            margin-top: 5rem;
-            transition: all .3s ease-out;
-            text-decoration: none;
-            text-transform: none;
-            letter-spacing: normal;
-            min-width: 150px;
-
-            &:hover {
-                cursor: pointer;
-                
-                box-shadow: 0rem 0rem 1rem $green;
-            }
-        }
+    @include respond(phone) {
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      
+      right: 0;
     }
 
-    &-image {
-        height: 100%;
-        width: 75%;
-        clip-path: polygon(0 0, 100% 0, 100% 0%, 50% 100%, 0 100%);
-        position: absolute;
-        & img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-            object-position: center;
-        }
+    & span {
+      display: block;
+      margin: 2rem 0rem 0rem 0rem;
     }
+
+    &-btn,
+    &-btn:link,
+    &-btn:visited {
+      border: none;
+      border-radius: 2px;
+      padding: 1rem 2rem;
+      font-size: 3rem;
+      background-color: $green;
+      color: black;
+      margin-top: 5rem;
+      transition: all 0.3s ease-out;
+      text-decoration: none;
+      text-transform: none;
+      letter-spacing: normal;
+      min-width: 150px;
+
+      @include respond(normal-desktop) {
+        font-size: 2.4rem;
+      }
+      @include respond(tab-land) {
+        font-size: 2rem;
+      }
+      @include respond(phone) {
+        font-size: 3rem;
+        min-width: 100px;
+      }
+
+      &:hover {
+        cursor: pointer;
+        box-shadow: 0rem 0rem 1rem $green;
+      }
+    }
+  }
+
+  &-image {
+    height: 100%;
+    width: 100%;
+    clip-path: polygon(0 0, 100% 0, 100% 0%, 50% 100%, 0 100%);
+    position: absolute;
+
+    @include respond(phone) {
+      clip-path: polygon(0 0, 100% 0, 100% 0%, 0% 100%, 0 100%);
+    }
+
+    & img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
+
+      @include respond(phone) {
+        object-position: right;
+        opacity: 0.5;
+      }
+    }
+  }
 }
