--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,6 +4,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
+  &:focus,
+  &:active {
+    outline: none;
+  }
 }
 
 html {
@@ -18,6 +23,7 @@ html {
   // background-size: cover;
   // background-attachment: fixed;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   @include respond(normal-desktop) {
     //width < 1600px
