--- a/src/sass/components/_landing.scss
+++ b/src/sass/components/_landing.scss
@@ -19,11 +19,10 @@
     right: 10rem;
     margin-top: 5rem;
 
-    @include respond(phone) {
+    @include respond(tab-port) {
       align-items: center;
       width: 100%;
       height: 100%;
-      
       right: 0;
     }
 
@@ -47,42 +46,55 @@
       text-transform: none;
       letter-spacing: normal;
       min-width: 150px;
+      min-height: 50px;
 
       @include respond(normal-desktop) {
         font-size: 2.4rem;
+        min-height: 40px;
+        min-width: 100px;
       }
       @include respond(tab-land) {
         font-size: 2rem;
+        min-height: 30px;
+        min-width: 100px;
       }
       @include respond(phone) {
         font-size: 3rem;
         min-width: 100px;
+        min-height: 20px;
       }
 
       &:hover {
         cursor: pointer;
         box-shadow: 0rem 0rem 1rem $green;
       }
+
     }
   }
 
   &-image {
     height: 100%;
     width: 100%;
-    clip-path: polygon(0 0, 100% 0, 100% 0%, 50% 100%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 65% 0%, 40% 100%, 0 100%);
     position: absolute;
 
-    @include respond(phone) {
+    // @include respond(tab-port) {
+    //   clip-path: polygon(0 0, 100% 0, 80% 0%, 20% 100%, 0 100%);
+    // }
+
+    @include respond(tab-port) {
       clip-path: polygon(0 0, 100% 0, 100% 0%, 0% 100%, 0 100%);
     }
 
     & img {
       height: 100%;
-      width: 100%;
+      width: 80%;
       object-fit: cover;
       object-position: center;
 
-      @include respond(phone) {
+      @include respond(tab-port) {
+        height: 100%;
+        width: 100%;
         object-position: right;
         opacity: 0.5;
       }
